integration and unit tests integrated in sonar